--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ input{
  ul li{
   list-style: none;
   font-size : 17px;
-  padding: 12px 8px 12px 50px;
+  padding: 12px 8px 10px 50px;
   user-select: none;
   cursor: pointer;
   position: relative;
@@ -81,22 +81,22 @@ input{
  ul li::before{
   content: '';
   position: absolute;
-  height: 22px;
+  height: 20px;
   width: 22px;
   border-radius: 50%;
   background-image: url(img/circle-regular.svg) ;
   background-size: cover;
   background-position: center;
-  top:9px;
+  top : 12px;
   left : 8px;
-  border-color: orange;
-  background: linear-gradient(220deg, #7f7f7f, #f7f7f7, rgba(152, 152, 152, 0.89));
+  background: linear-gradient(220deg, #c8c7c7, #f7f7f7, rgba(225, 222, 222, 0.89));
   
  }
 
  ul li.checked {
   color: #79797996;
   text-decoration: line-through;
+  animation: bounce 2s infinite;
 }
 
 ul li.checked::before {
@@ -105,7 +105,6 @@ ul li.checked::before {
   display: inline-block;
   width: 20px;
   height: 20px;
-  animation: bounce 2s infinite;
   background-color: #79797996; /* Match tick color with the text color */
 }
 
@@ -114,6 +113,37 @@ ul li.checked::before {
     transform: translateY(2px);
   }
   50% {
-    transform: translateY(5px);
+    transform: translateY(4px);
   }
+}
+
+ul li span{
+  position: absolute;
+  right: 10px;
+  top : 4px;
+  bottom: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  color: #555;
+  line-height: 40px;
+  text-align : center;
+  border-radius: 50px;
+}
+
+ul li span:hover{
+  background: #edeef0;
+}
+
+.delete-all{
+  margin-top: 40px;
+  padding: 10px;
+  display: flex;
+  width: 100%;
+  height: 5px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  font-size: 10px;
+  background: linear-gradient(220deg, #ffffff10, #ff7373ab, rgba(255, 255, 255, 0.216));
 }
